# 9_evaluation_selection

./: LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: python-package.yml
src/forest/: data.py  pipeline.py  train.py  train_nested.py
tests/: test_train.py
