[tool.poetry]
name = "forest"
version = "0.1.0"
description = "Homework for RS School Machine Learning course"
authors = ["devbrest <devbrest@gmail.com>"]

[tool.poetry.scripts]
train = "forest.train:train"
train_nested = "forest.train_nested:train_nested"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pandas = "^1.3.4"
sklearn = "^0.0"
scikit-learn = "^1.0.1"
mlflow = "^1.22.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
